# MemoryRadar

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: bootstrap.py  db.py  main.py  models.py  schemas.py  services.py  settings.py  time_utils.py  worker.py
backend/app/collectors/: github.py  serper_search.py
backend/app/llm/: provider.py
backend/app/processors/: events.py  github_radar.py
backend/memory_market_watcher_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_backend_logic.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AdminGate.tsx  ReportList.tsx  Sidebar.tsx  Toast.tsx  ui.tsx
frontend/app/events/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/lib/: api.ts
frontend/app/radar/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/skills/: page.tsx
frontend/app/watchlist/: page.tsx
frontend/app/weekly/: page.tsx
frontend/components/: MarkdownContent.tsx
frontend/lib/: api.ts  client-api.ts  server-api.ts
skills/agent-memory-daily-report/: SKILL.md
skills/agent-memory-daily-report/agents/: openai.yaml
skills/agent-memory-daily-report/references/: api.md
skills/agent-memory-daily-report/scripts/: daily_report.py
