[project]
name = "memory-market-watcher-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "python-dateutil>=2.9.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
